[package]
name = "file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys = { path="../lib-sys" }
lib = { path="../lib-lib" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = "2.1"

image = "0.24"
ico = "0.2"

lazy_static = "1.4"