[package]
name = "libfile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liblib = { path = "../lib-lib", features = ["json", "win"] }

image = "0.24"
ico = "0.2"

serde = { version = "1.0", features = ["derive"] }
