[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 此库不能引用其它本地库

log = "0.4"

lazy_static = "1.4"

# serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
# serde_with = "2.1"
