[package]
name = "liblib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 此库不能引用其它本地库

log = { version = "0.4", optional = true }

lazy_static = { version = "1.4", optional = true }

serde_json = { version = "1.0", optional = true }
serde_repr = { version = "0.1", optional = true }
# serde_with = "2.1"
# serde = { version = "1.0", features = ["derive"] }

winapi = { version = "0.3", features = [
    "knownfolders",
    "objbase",
    "shlobj",
    "winbase",
    "winerror",
], optional = true }

[features]
default = ["log", "lazy_static"] # 默认启用
# 可选
json = ["serde_json", "serde_repr"]
win = ["winapi"]
